--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disco Den</title>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 
 
@@ -11,18 +13,20 @@
     <div class="top">
         <div class="header">
             <div class="logo">Header Logo</div>
-            <div class="link">header link one</div>
-            <div class="link">header link two</div>
-            <div class="link">header link three</div>
+            <div class="links">
+                <div class="link">header link one</div>
+                <div class="link">header link two</div>
+                <div class="link">header link three</div>
+            </div>
         </div>
 
-        <div class="top">
+        <div class="top2">
             <div class="sub-header">
-                <div class="logo">This website is awesome</div>
+                <div class="logo2">This website is awesome</div>
                 <div class="text">This website has some subtext that goes under the main title. Its a smaller font and color has less contrast.</div>
                 <button>Sign Up</button>
             </div>
-            <div>Image Goes Here</div>
+            <div class="prince">Image Goes Here</div>
         </div>
     </div>
 
@@ -30,7 +34,7 @@
 
 
     <div class="middle">
-        <div class="header">Some random thoughts</div>
+        <div class="header2">Some random thoughts</div>
         <div class="four">
             <div class="image">Image here</div>
             <div class="image">Image here</div>
@@ -42,8 +46,10 @@
             <div class="author">muscician name</div>
         </div>
         <div class="signup">
-            <div>Call to action!Its time!</div>
-            <div>Sign up for our product by clicking that button over there.</div>
+            <div class="action">
+                <div>Call to action!Its time!</div>
+                <div>Sign up for our product by clicking that button over there.</div>
+            </div>
             <button>signup</button>
         </div>
 
